# Spin2Scaling

./: AliceRingRamps.h  CMakeLists.txt  KnotRamps.h  README.md  Spin2GpeBCC.cu  calculate_k.h  mesh.h  scale.h  utils.h
